--- a/market/usdx/about.html
+++ b/market/usdx/about.html
@@ -21,7 +21,7 @@
           <div class="col-lg-12">
             <section class="panel">
               <header class="panel-heading">
-                <b><span data-i18n="menu_home">Welcome to the Blue0x Decentralized Marketplace</span></b>
+                <b><span data-i18n="menu_home">Welcome to the Blue0x USDX Decentralized Marketplace</span></b>
               </header>
               <div class="panel-body">
                 <p><span data-i18n="welcome_text1"></span></p>
