--- a/usdx.html
+++ b/usdx.html
@@ -17,7 +17,10 @@
 		<div class="menu-wrap">
 			<h1 class="logo"><a>Blue0x|Market</a></h1>
 			<i class="icon-remove menu-close"></i>
-			<a href="./market/usdx/index_login.html" class="smoothScroll">View My Account</a>
+			<a href="https://blue0x.com" class="smoothScroll">Blue0x|HOME</a>
+			<a href="https://exchange.blue0x.com" class="smoothScroll">Blue0x|EXCHANGE</a>
+			<a href="https://lite.blue0x.com" class="smoothScroll">Blue0x|LITE</a>
+			<a href="https://explorer.blue0x.com" class="smoothScroll">Blue0x|EXPLORER</a>
 			<a href="https://learn.blue0x.com" class="smoothScroll">Learn More</a>
 			<a href="https://learn.blue0x.com/setup/vps/" class="smoothScroll">Need a Wallet?</a>
 			<a href="https://twitter.com/Blue0x_com"><i class="fab fa-twitter"></i></a>
@@ -33,7 +36,7 @@
 			<div class="row">
 				<h1>BLUE0X|<span>MARKET</span></h1>
 				<h2>BLUE0X <span>MARKET</span></h2>
-				<p style="color:white;">USDX - United States Dollar Market.</p>
+				<p style="color:white;margin-top:20px;">USDX - United States Dollar Market.</p>
 				<a role="button" class="myButton" href="./market/usdx/index_v.html">View All</a>&nbsp;<a role="button" class="myButton" href="./market/usdx/index_l.html">Sell Item</a>
 			</div><!-- /row -->
 		</div><!-- /container -->
