--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<div class="row">
 				<h1>BLUE0X|<span>MARKET</span></h1>
 				<h2>BLUE0X <span>MARKET</span></h2>
-				<p style="color:white;margin-top:14px;">Decentralized Global Marketplace</p>
+				<p style="color:white;margin-top:14px;margin-bottom:14px;">Decentralized Global Marketplace</p>
 				<form action="#">
 				<select class="form-control m-bot15" name="market">
 					<option value="#">Select A Market...</option>
