--- a/usdx.html
+++ b/usdx.html
@@ -36,7 +36,7 @@
 			<div class="row">
 				<h1>BLUE0X|<span>MARKET</span></h1>
 				<h2>BLUE0X <span>MARKET</span></h2>
-				<p style="color:white;margin-top:14px;">USDX - United States Dollar Market.</p>
+				<p style="color:white;margin-top:14px;">USDX - United States Dollar Market</p>
 				<a role="button" class="myButton" href="./market/usdx/index_v.html">View All</a>&nbsp;<a role="button" class="myButton" href="./market/usdx/index_l.html">Sell Item</a>
 			</div><!-- /row -->
 		</div><!-- /container -->
