--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<a href="https://learn.blue0x.com/setup/vps/" class="smoothScroll">Need a Wallet?</a>
 			<a href="https://twitter.com/Blue0x_com"><i class="fab fa-twitter"></i></a>
 			<a href="https://t.me/blue0xcom"><i class="fab fa-telegram-plane"></i></a>
-			<a href="https://discord.gg/8db6CRqM4H"><i class="fab fa-discord"></i></a>
+			<a href="https://discord.com/invite/EbBWRSPW63"><i class="fab fa-discord"></i></a>
 			<a href="https://github.com/theBlue0x"><i class="fab fa-github"></i></a>
 		</div>
 		<div id="menuToggle"><i class="fas fa-bars"></i></div>
