--- a/market/usdx/callUSDX.html
+++ b/market/usdx/callUSDX.html
@@ -142,7 +142,7 @@ docReady(function() {
                          <div id="qr-reader"></div>
                         </div>
                       <div class="modal-footer">
-                        <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                       </div>
                     </div> 
                   </div> 
@@ -157,7 +157,7 @@ docReady(function() {
                          <div id="qr-reader1"></div>
                         </div>
                       <div class="modal-footer">
-                        <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                       </div>
                     </div> 
                   </div> 
