--- a/market/usdx/callBLX.html
+++ b/market/usdx/callBLX.html
@@ -139,7 +139,7 @@ docReady(function() {
                          <div id="qr-reader"></div>
                         </div>
                       <div class="modal-footer">
-                        <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                       </div>
                     </div> <!-- /.modal-content -->
                   </div> <!-- /.modal-dialog -->
@@ -154,7 +154,7 @@ docReady(function() {
                          <div id="qr-reader1"></div>
                         </div>
                       <div class="modal-footer">
-                        <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                       </div>
                     </div> <!-- /.modal-content -->
                   </div> <!-- /.modal-dialog -->
