--- a/usdx.html
+++ b/usdx.html
@@ -19,9 +19,9 @@
 			<i class="icon-remove menu-close"></i>
 			<a href="https://blue0x.com" class="smoothScroll">Blue0x|HOME</a>
 			<a href="https://exchange.blue0x.com" class="smoothScroll">Blue0x|EXCHANGE</a>
-			<a href="https://lite.blue0x.com" class="smoothScroll">Blue0x|LITE</a>
+			<!--a href="https://lite.blue0x.com" class="smoothScroll">Blue0x|LITE</a-->
 			<a href="https://explorer.blue0x.com" class="smoothScroll">Blue0x|EXPLORER</a>
-			<a href="https://learn.blue0x.com" class="smoothScroll">Learn More</a>
+			<a href="https://learn.blue0x.com" class="smoothScroll">Blue0x|LEARN</a>
 			<a href="https://learn.blue0x.com/setup/vps/" class="smoothScroll">Need a Wallet?</a>
 			<a href="https://twitter.com/Blue0x_com"><i class="fab fa-twitter"></i></a>
 			<a href="https://t.me/blue0xcom"><i class="fab fa-telegram-plane"></i></a>
@@ -34,9 +34,10 @@
 	<div id="headerwrap">
 		<div class="container">
 			<div class="row">
+				<img src="assets/img/logo.png" class="img-fluid" style="margin-bottom:-42px;">
 				<h1>BLUE0X|<span>MARKET</span></h1>
 				<h2>BLUE0X <span>MARKET</span></h2>
-				<p style="color:white;margin-top:14px;">USDX - United States Dollar Market</p>
+				<p style="color:white;margin-top:20px;margin-bottom:24px;line-height:22px;">USDX - United States Dollar Market</p>
 				<a role="button" class="myButton" href="./market/usdx/index_v.html">View All</a>&nbsp;<a role="button" class="myButton" href="./market/usdx/index_l.html">Sell Item</a>
 			</div><!-- /row -->
 		</div><!-- /container -->
