--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 			<div class="row">
 				<img src="assets/img/logo.png" class="img-fluid" style="margin-bottom:-42px;">
 				<h1>BLUE0X|<span>MARKET</span></h1>
-				<h2>BLUE0X <span>MARKET</span></h2>
-				<p style="color:white;margin-top:20px;margin-bottom:24px;line-height:22px;">Decentralized Global Marketplace</p>
+				<h2>BLUE0X|<span>MARKET</span></h2>
+				<p style="color:white;margin-top:20px;margin-bottom:18px;line-height:22px;">Decentralized Global Marketplace</p>
 				<form action="#">
 				<select class="form-control m-bot15" name="market">
 					<option value="#">Select A Market...</option>
