--- a/usdx.html
+++ b/usdx.html
@@ -36,7 +36,7 @@
 			<div class="row">
 				<img src="assets/img/logo.png" class="img-fluid" style="margin-bottom:-42px;">
 				<h1>BLUE0X|<span>MARKET</span></h1>
-				<h2>BLUE0X <span>MARKET</span></h2>
+				<h2>BLUE0X|<span>MARKET</span></h2>
 				<p style="color:white;margin-top:20px;margin-bottom:24px;line-height:22px;">USDX - United States Dollar Market</p>
 				<a role="button" class="myButton" href="./market/usdx/index_v.html">View All</a>&nbsp;<a role="button" class="myButton" href="./market/usdx/index_l.html">Sell Item</a>
 			</div><!-- /row -->
