--- a/market/usdx/ViewItem.html
+++ b/market/usdx/ViewItem.html
@@ -92,10 +92,10 @@
             if (Extension == "gif" || Extension == "png" || Extension == "jpeg" || Extension == "jpg") {
               var main_image_url = escapeHtml(message.i);
             } else {
-              var main_image_url = "img/Box-icon.png";
+              var main_image_url = "../img/Box-icon.png";
             }
           } else {
-            var main_image_url = "img/Box-icon.png";
+            var main_image_url = "../img/Box-icon.png";
           }
           document.getElementById("top_image").innerHTML = '<a id="previewMainImageLink" class="fancybox" rel="group" href="' + main_image_url + '"><img alt="" src="' + main_image_url + '"></a>';
         } 
@@ -107,10 +107,10 @@
               var additional_image_1_URL = escapeHtml(message.i1);
               additional_images_section += '<a id="previewMainImageLink" class="fancybox" rel="group" href="' + additional_image_1_URL + '"><img src="' + additional_image_1_URL + '" width="200" height="200" alt="Image 1" /></a>';
             } else {
-              var additional_image_1_URL = "img/Box-icon.png";
+              var additional_image_1_URL = "../img/Box-icon.png";
             }
           } else {
-            var additional_image_1_URL = "img/Box-icon.png";
+            var additional_image_1_URL = "../img/Box-icon.png";
           }} 
         if (additional_image_2_URL) {
           if (validator.isURL(message.i2)) {
@@ -119,10 +119,10 @@
               var additional_image_2_URL = escapeHtml(message.i2);
               additional_images_section += '<a id="previewMainImageLink" class="fancybox" rel="group" href="' + additional_image_2_URL + '"><img src="' + additional_image_2_URL + '" width="200" height="200" alt="Image 2" /></a>';
             } else {
-              var additional_image_2_URL = "img/Box-icon.png";
+              var additional_image_2_URL = "../img/Box-icon.png";
             }
           } else {
-            var additional_image_2_URL = "img/Box-icon.png";
+            var additional_image_2_URL = "../img/Box-icon.png";
           }} 
         if (additional_image_3_URL) {
           if (validator.isURL(message.i3)) {
@@ -131,10 +131,10 @@
               var additional_image_3_URL = escapeHtml(message.i3);
               additional_images_section += '<a id="previewMainImageLink" class="fancybox" rel="group" href="' + additional_image_3_URL + '"><img src="' + additional_image_3_URL + '" width="200" height="200" alt="Image 3" /></a>';
             } else {
-              var additional_image_3_URL = "img/Box-icon.png";
+              var additional_image_3_URL = "../img/Box-icon.png";
             }
           } else {
-            var additional_image_3_URL = "img/Box-icon.png";
+            var additional_image_3_URL = "../img/Box-icon.png";
           }}
         if (additional_image_4_URL) {
           if (validator.isURL(message.i4)) {
@@ -143,10 +143,10 @@
               var additional_image_4_URL = escapeHtml(message.i4);
               additional_images_section += '<a id="previewMainImageLink" class="fancybox" rel="group" href="' + additional_image_4_URL + '"><img src="' + additional_image_4_URL + '" width="200" height="200" alt="Image 4" /></a>';
             } else {
-              var additional_image_4_URL = "img/Box-icon.png";
+              var additional_image_4_URL = "../img/Box-icon.png";
             }
           } else {
-            var additional_image_4_URL = "img/Box-icon.png";
+            var additional_image_4_URL = "../img/Box-icon.png";
           }}
         if (additional_images_section) {
           additional_images_section += '</div><br />';
@@ -594,7 +594,7 @@ docReady(function() {
                     <aside class="profile-nav alt">
                       <section class="panel">
                         <div class="user-heading alt">
-                          <span id="top_image"><a href="#"><img alt="" src="img/Box-icon.png"></a></span>
+                          <span id="top_image"><a href="#"><img alt="" src="../img/Box-icon.png"></a></span>
                           <h1 id="title">No Item Title</h1>
                           <p><b> <span data-i18n="seller_id">Seller ID</span>:</b> <span id="sellerID"></span></p>
                           </div>
@@ -675,7 +675,7 @@ docReady(function() {
                                 <button data-dismiss="modal" class="btn btn-secondary" type="button">Close</button>&nbsp;
                                 <button data-dismiss="modal" class="btn btn-default" type="button" onclick="message()"><span data-i18n="message_to_seller">Message Seller</span></button>
                             </div>
-                            <p>The network fee of this transaction is 1 BLX.</p>
+                            <p>The network fee of this transaction is 0.01 BLX.</p>
                             </div>
                           </div>
                         </div>
@@ -770,7 +770,7 @@ docReady(function() {
       currency: Constants.USDXId,
       units: price,
       secretPhrase: $("#secret_phrase").val(),
-      feeNQT: 100000000,
+      feeNQT: 1000000,
       deadline: 60
     },
       function(payment){
@@ -798,7 +798,7 @@ docReady(function() {
       priceNQT: 100000000,
       quantity: 1,
       deliveryDeadlineTimestamp: sessionStorage.getItem("futureTime"),
-      feeNQT: 100000000,
+      feeNQT: 1000000,
       deadline: 60
       },
       function(result){
@@ -823,7 +823,7 @@ docReady(function() {
       currency: Constants.USDXId,
       units: price,
       secretPhrase: $("#secret_phrase").val(),
-      feeNQT: 100000000,
+      feeNQT: 1000000,
       deadline: 60
     },
       function(payment){
@@ -848,7 +848,7 @@ docReady(function() {
         encryptedMessageIsPrunable: 'true',
         messageToEncrypt: $("#messageToSeller").val(),
         secretPhrase: $("#secret_phrase_message").val(),
-        feeNQT: 100000000,
+        feeNQT: 1000000,
         deadline: 60
       },
       function(result){
