--- a/market/usdx/ViewYourItemSold.html
+++ b/market/usdx/ViewYourItemSold.html
@@ -70,10 +70,10 @@
             if (Extension == "gif" || Extension == "png" || Extension == "jpeg" || Extension == "jpg") {
               var main_image_url = escapeHtml(message.i);
             } else {
-              var main_image_url = "img/Box-icon.png";
+              var main_image_url = "../img/Box-icon.png";
             }
           } else {
-            var main_image_url = "img/Box-icon.png";
+            var main_image_url = "../img/Box-icon.png";
           }
           document.getElementById("top_image").innerHTML = '<a id="previewMainImageLink" class="fancybox" rel="group" href="' + main_image_url + '"><img alt="" src="' + main_image_url + '"></a>';
         } 
@@ -85,10 +85,10 @@
               var additional_image_1_URL = escapeHtml(message.i1);
               additional_images_section += '<a id="previewMainImageLink" class="fancybox" rel="group" href="' + additional_image_1_URL + '"><img src="' + additional_image_1_URL + '" width="200" height="200" alt="Image 1" /></a>';
             } else {
-              var additional_image_1_URL = "img/Box-icon.png";
+              var additional_image_1_URL = "../img/Box-icon.png";
             }
           } else {
-            var additional_image_1_URL = "img/Box-icon.png";
+            var additional_image_1_URL = "../img/Box-icon.png";
           }} 
         if (additional_image_2_URL) {
           if (validator.isURL(message.i2)) {
@@ -97,10 +97,10 @@
               var additional_image_2_URL = escapeHtml(message.i2);
               additional_images_section += '<a id="previewMainImageLink" class="fancybox" rel="group" href="' + additional_image_2_URL + '"><img src="' + additional_image_2_URL + '" width="200" height="200" alt="Image 2" /></a>';
             } else {
-              var additional_image_2_URL = "img/Box-icon.png";
+              var additional_image_2_URL = "../img/Box-icon.png";
             }
           } else {
-            var additional_image_2_URL = "img/Box-icon.png";
+            var additional_image_2_URL = "../img/Box-icon.png";
           }} 
         if (additional_image_3_URL) {
           if (validator.isURL(message.i3)) {
@@ -109,10 +109,10 @@
               var additional_image_3_URL = escapeHtml(message.i3);
               additional_images_section += '<a id="previewMainImageLink" class="fancybox" rel="group" href="' + additional_image_3_URL + '"><img src="' + additional_image_3_URL + '" width="200" height="200" alt="Image 3" /></a>';
             } else {
-              var additional_image_3_URL = "img/Box-icon.png";
+              var additional_image_3_URL = "../img/Box-icon.png";
             }
           } else {
-            var additional_image_3_URL = "img/Box-icon.png";
+            var additional_image_3_URL = "../img/Box-icon.png";
           }}
         if (additional_image_4_URL) {
           if (validator.isURL(message.i4)) {
@@ -121,10 +121,10 @@
               var additional_image_4_URL = escapeHtml(message.i4);
               additional_images_section += '<a id="previewMainImageLink" class="fancybox" rel="group" href="' + additional_image_4_URL + '"><img src="' + additional_image_4_URL + '" width="200" height="200" alt="Image 4" /></a>';
             } else {
-              var additional_image_4_URL = "img/Box-icon.png";
+              var additional_image_4_URL = "../img/Box-icon.png";
             }
           } else {
-            var additional_image_4_URL = "img/Box-icon.png";
+            var additional_image_4_URL = "../img/Box-icon.png";
           }}
         if (additional_images_section) {
           additional_images_section += '</div><br />';
@@ -524,7 +524,7 @@
                     <aside class="profile-nav alt">
                       <section class="panel">
                         <div class="user-heading alt">
-                          <span id="top_image"><a href="#"><img alt="" src="img/Box-icon.png"></a></span>
+                          <span id="top_image"><a href="#"><img alt="" src="../img/Box-icon.png"></a></span>
                           <h1 id="title">No Item Title</h1>
                           <p><b> <span data-i18n="seller_id">Seller ID</span>:</b> <span id="sellerID"></span></p>
                           </div>
