--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 					<option value="chfx.html">CHFX - Swiss Franc</option>
 					<option value="cnyx.html">CNYX - Chinese Yuan</option>
 					<option value="eurx.html">EURX - Euro</option>
-					<option value="gbpx.html">GBPX - British Pound Sterling</option>
+					<option value="gbpx.html">GBPX - British Pound</option>
 					<option value="iqdx.html">IQDX - Iraqi Dinar</option>
 					<option value="irrx.html">IRRX - Iranian Rial</option>
 					<option value="jpyx.html">JPYX - Japanese Yen</option>
 					<option value="nzdx.html">NZDX - New Zealand Dollar</option>
-					<option value="rubx.html">NZDX - Russian Ruble Dollar</option>
+					<option value="rubx.html">NZDX - Russian Ruble</option>
 				</select>
 				<br/>
 				<input type="button" class="myButton" onclick="window.open(this.form.market.options[this.form.market.selectedIndex].value,'_top')" value="Continue">
