--- a/gbpx.html
+++ b/gbpx.html
@@ -37,7 +37,7 @@
 				<h1>BLUE0X|<span>MARKET</span></h1>
 				<h2>BLUE0X|<span>MARKET</span></h2>
 				<p style="color:white;margin-top:20px;margin-bottom:24px;line-height:22px;">GBPX - British Pound Market</p>
-				<a role="button" class="myButton" href="./market/usdx/index_v.html">View All</a>&nbsp;<a role="button" class="myButton" href="./market/usdx/index_l.html">Sell Item</a>
+				<a role="button" class="myButton" href="./market/gbpx/index_v.html">View All</a>&nbsp;<a role="button" class="myButton" href="./market/gbpx/index_l.html">Sell Item</a>
 			</div><!-- /row -->
 		</div><!-- /container -->
 	</div><!-- /headerwrap -->
