--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<option value="irrx.html">IRRX - Iranian Rial</option>
 					<option value="jpyx.html">JPYX - Japanese Yen</option>
 					<option value="nzdx.html">NZDX - New Zealand Dollar</option>
-					<option value="rubx.html">NZDX - Russian Ruble</option>
+					<option value="rubx.html">RUBX - Russian Ruble</option>
 				</select>
 				<br/>
 				<input type="button" class="myButton" onclick="window.open(this.form.market.options[this.form.market.selectedIndex].value,'_top')" value="Continue">
