remove inner box shadow

--- a/market/usdx/ViewYourItemSingle.html
+++ b/market/usdx/ViewYourItemSingle.html
@@ -559,7 +559,7 @@
               <div class="panel-body" style="padding:30px;padding-bottom:0px;padding-top:20px;" id="panel-body">
                 <div class="form-group">
                     <aside class="profile-nav alt">
-                      <section class="panel">
+                      <section class="panel" style="box-shadow:none">
                         <div class="user-heading alt">
                           <span id="top_image"><a href="#"><img alt="" src="../img/Box-icon.png"></a></span>
                           <h1 id="title">No Item Title</h1>
