--- a/market/iqdx/SearchByLocation.html
+++ b/market/iqdx/SearchByLocation.html
@@ -27,7 +27,7 @@
               <div class="panel-body">
               	<div class="form-group">
                 <select class="form-control m-bot15" style="width:50vw;border:1px solid #939393;" id="itemLocation" onchange="searchLocation()">
-                  <option>Select a Location</option>
+                  <option disabled selected hidden>Select a Location</option>
                   <optgroup label="Alabama">
                   <option value="aub"> Auburn, Alabama </option>
                   <option value="bhm"> Birmingham, Alabama </option>
