--- a/market/usdx/ListNewItem.html
+++ b/market/usdx/ListNewItem.html
@@ -224,7 +224,7 @@ hr {
                   <option value="electronics" data-i18n="[text]electronics">Electronics</option>
                   <option value="crafts" data-i18n="[text]crafts">Crafts</option>
                   <option value="movies" data-i18n="[text]dvds">DVDs and Movies</option>
-                  <option selected value="everything" data-i18n="[text]everything_else">Everything Else</option>
+                  <option value="everything" data-i18n="[text]everything_else">Everything Else</option>
                   <option value="food" data-i18n="[text]food_drink">Food and Drink</option>
                   <option value="gift" data-i18n="[text]gift_cards">Gift Cards</option>
                   <option value="health" data-i18n="[text]health_beauty">Health and Beauty</option>
@@ -275,7 +275,7 @@ hr {
               <div class="form-group">
                 <label for="itemLocation"><span data-i18n="location">Location</span></label>
                 <select class="form-control m-bot15" id="itemLocation">
-                  <option>Select a Location</option>
+                  <option disabled selected hidden>Select a Location</option>
                   <optgroup label="Alabama">
                   <option value="aub"> Auburn, Alabama </option>
                   <option value="bhm"> Birmingham, Alabama </option>
