Update cities lists

--- a/market/cadx/ViewItem.html
+++ b/market/cadx/ViewItem.html
@@ -153,39 +153,59 @@
           document.getElementById("extra_images_section").innerHTML = additional_images_section;
         }});
         var cities = {   
-        "aub":  " Auburn, Alabama ",
-        "bhm":  " Birmingham, Alabama ",
-        "dhn":  " Dothan, Alabama ",
-        "msl":  " Florence, Alabama ",
-        "anb":  " Gadsden-Anniston, Alabama ",
-        "hsv":  " Huntsville, Alabama ",
-        "mob":  " Mobile, Alabama ",
-        "mgm":  " Montgomery, Alabama ",
-        "tsc":  " Tuscaloosa, Alabama ",
-        "anc":  " Anchorage, Alaska ",
-        "fai":  " Fairbanks, Alaska ",
-        "ena":  " Kenai Peninsula, Alaska ",
-        "flg":  " Flagstaff, Arizona ",
-        "mhv":  " Mohave County, Arizona ",
-        "phx":  " Phoenix, Arizona ",
-        "prc":  " Prescott, Arizona ",
-        "tus":  " Tucson, Arizona ",
-        "yum":  " Yuma, Arizona ",
-        "fyv":  " Fayetteville, Arkansas ",
-        "jbr":  " Jonesboro, Arkansas ",
-        "lit":  " Little Rock, Arkansas ",
-        "txk":  " Texarkana, Arkansas ",
-        "bak":  " Bakersfield, California ",
-        "chc":  " Chico, California ",
-        "fre":  " Fresno, California ",
-        "hmb":  " Humboldt County, California ",
-        "imp":  " Imperial County, California ",
-        "inl":  " Inland Empire, California ",
-        "lax":  " Los Angeles, California ",
-        "mdo":  " Mendocino County, California ",
-        "mer":  " Merced, California ",
-        "mod":  " Modesto, California ",
-        "mtb":  " Monterey Bay, California ",
+        "clg":  " Calgary, Alberta ",
+        "edm":  " Edmonton, Alberta ",
+        "fmc":  " Fort McMurray, Alberta ",
+        "lth":  " Lethbridge, Alberta ",
+        "hat":  " Medicine Hat, Alberta ",
+        "pax":  " Peace River, Alberta ",
+        "red":  " Red Deer, Alberta ",
+        "cbo":  " Cariboo, British Columbia ",
+        "cmx":  " Comox Valley, British Columbia ",
+        "abb":  " Fraser Valley, British Columbia ",
+        "kml":  " Kamloops, British Columbia ",
+        "kel":  " Kelowna / Okanagan, British Columbia ",
+        "koo":  " Kootenays, British Columbia ",
+        "nmo":  " Nanaimo, British Columbia ",
+        "yxs":  " Prince George, British Columbia ",
+        "ske":  " Skeena-Bulkley, British Columbia ",
+        "sun":  " Sunshine Coast, British Columbia ",
+        "van":  " Vancouver, British Columbia ",
+        "vic":  " Victoria, British Columbia ",
+        "whi":  " Whistler, British Columbia ",
+        "win":  " Winnipeg, Manitoba ",
+        "nbw":  " New Brunswick ",
+        "nfl":  " Newfoundland and Labrador ",
+        "ykf":  " Northwest Territories ",
+        "hfx":  " Halifax, Nova Scotia ",
+        "brr":  " Barrie, Ontario ",
+        "bel":  " Belleville, Ontario ",
+        "bfd":  " Brantford-Woodstock, Ontario ",
+        "chk":  " Chatham-Kent, Ontario ",
+        "vcc":  " Cornwall, Ontario ",
+        "gph":  " Guelph, Ontario ",
+        "hml":  " Hamilton-Burlington, Ontario ",
+        "kng":  " Kingston, Ontario ",
+        "kch":  " Kitchener-Waterloo-Cambridge, Ontario ",
+        "lon":  " London, Ontario ",
+        "nsc":  " Niagara Region, Ontario ",
+        "ott":  " Ottawa-Hull-Gatineau, Ontario ",
+        "ows":  " Owen Sound, Ontario ",
+        "ypq":  " Peterborough, Ontario ",
+        "srn":  " Sarnia, Ontario ",
+        "soo":  " Sault Ste Marie, Ontario ",
+        "sud":  " Sudbury, Ontario ",
+        "tby":  " Thunder Bay, Ontario ",
+        "tor":  " Toronto, Ontario ",
+        "wsr":  " Windsor, Ontario ",
+        "pei":  " Prince Edward Island ",
+        "mon":  " Montreal, Quebec ",
+        "qbc":  " Quebec City, Quebec ",
+        "sgy":  " Saguenay, Quebec ",
+        "shb":  " Sherbrooke, Quebec ",
+        "trs":  " Trois-Rivieres, Quebec ",
+        "reg":  " Regina, Saskatchewan ",
+        "skt":  " Saskatoon, Saskatchewan "
       }
         function getCityName(name){
           var city = (cities[name]);
