--- a/market/chfx/sendCurrency.html
+++ b/market/chfx/sendCurrency.html
@@ -33,13 +33,13 @@
       var processingText = $.t("button_processing");
       document.getElementById("callNxtButtonSection").innerHTML = "<button type=\"button\" id=\"sellButton1\" class=\"btn btn-default\"><i class=\"fa fa-refresh fa-spin\"></i> &nbsp;" + processingText + "</button>";
       $.post(Constants.apiUrl, {
-          "requestType": "transferCurrency",
-          "secretPhrase": $('#secretPhrase').val(),
-          "recipient": $('#destinationAddress').val(),
-          "currency": Constants.CHFXId,
-          "units": amount,
-          "feeNQT": "100000000",
-          "deadline": "60"
+          requestType: "transferCurrency",
+          secretPhrase: $('#secretPhrase').val(),
+          recipient: $('#destinationAddress').val(),
+          currency: Constants.CHFXId,
+          units: amount,
+          feeNQT: 1000000,
+          deadline: 60
         },
       function(result) {
         var transactionNumber = result.transaction;
